--- a/src/text.tex
+++ b/src/text.tex
@@ -108,6 +108,14 @@
   </section>
 
 
+<img src= "https://www.sololearn.com/Certificate/1097-23251833/jpg/"         class="d-block w-50" alt="..."  />
+
+
+
+
+ <img src="https://www.sololearn.com/Certificate/1162-23251833/jpg/"     class="d-block w-50" alt="..."  />
+
+ <img src="https://www.sololearn.com/Certificate/1014-23251833/jpg/"      class="d-block w-50" alt="..."  />
 
 
 
@@ -120,3 +128,214 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+img{
+    width: 500px;
+    height: 300px;
+}
+
+.skillBar{
+    margin-top: 100px;
+    margin-left: 300px;
+}
+.skillBar li{
+    list-style: none;
+    margin-left: -250px;
+ 
+}
+.htmlGp,.reactGp,.responsiveGp,.cssGp,.jqueryGp,.bsGp,.jsGp{
+    display: flex;
+    
+    align-items: center;
+}
+
+.bar{
+    width:400px;
+    height:10px;
+    background-color: black;
+    
+
+}
+
+.react{
+    background-color: aqua;
+}
+.bar span:nth-child(1){
+    float:left;
+    background-color:red ;
+}
+
+.bar span:nth-child(2){
+    float:left;
+    background-color:rgb(0, 8, 255) ;
+}
+
+.bar span:nth-child(3){
+    float:left;
+    background-color:rgb(255, 247, 0) ;
+}
+
+.bar span:nth-child(4){
+    float:left;
+    background-color:rgb(10, 108, 169) ;
+}
+
+.bar span:nth-child(5){
+    float:left;
+    background-color:rgb(212, 0, 255) ;
+}
+
+.bar span:nth-child(6){
+    float:left;
+    background-color:rgb(0, 255, 255) ;
+}
+
+
+
+.html{
+    width:90%;
+    animation: html 3s linear ;
+}
+.css{
+    width:90%;
+    animation: css 3s linear ;
+}
+.js{
+    width:90%;
+    animation: js 3s linear ;
+}
+.jquery{
+    width:30%;
+    animation: jquery 3s linear ;
+}
+.bs{
+    width:90%;
+    animation: bs 3s linear ;
+}
+.react{
+    width:90%;
+    animation: react 3s linear ;
+}
+
+
+
+
+
+
+
+
+
+
+<div className="skillBar">
+
+
+<li>
+
+  
+  <div className="htmlGp">
+  <h3>HTML</h3>
+<div className="bar"><div className="html"></div></div>
+  </div>
+</li>
+
+
+<li >
+
+
+ <div className="cssGp">
+
+ <h3>css</h3>
+<div className="bar"><div className="css"></div></div>
+ </div>
+ 
+</li>
+
+
+
+<li>
+  
+  
+<div className="jsGp">
+<h3>js</h3>
+<div className="bar"><div className="js"></div></div>
+</div>
+
+</li>
+
+
+<li>
+
+  
+<div className="responsiveGp">
+<h3>Responsive web Design</h3>
+ 
+ <div className="bar"><div className="responsive web Design"></div></div>
+</div>
+
+
+</li>
+
+
+<li >
+
+ 
+<div className="jqueryGp">
+<h3>Jquery</h3>
+<div className="bar"><div className="jquery"></div></div>
+</div>
+
+</li>
+
+
+
+
+<li className="bsGp"><h3>bootstrap</h3>
+<div className="bar"><div className="bs"></div></div>
+</li>
+
+
+
+
+
+<li >
+ <div className="reactGp">
+ <h3>react</h3>
+<div className="bar"><div className="react"></div></div>
+</div>
+</li>
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+  <Item className="seconditem  item  ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, ipsa eaque? Natus veritatis unde tenetur deleniti reiciendis, dolores soluta ipsa hic enim nesciunt labore consequuntur voluptate laboriosam voluptatibus fugiat aliquid?</Item>
+      <Item className="thirditem  item ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, ipsa eaque? Natus veritatis unde tenetur deleniti reiciendis, dolores soluta ipsa hic enim nesciunt labore consequuntur voluptate laboriosam voluptatibus fugiat aliquid?</Item>
+
+      <Item className="fourthitem  item " >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, ipsa eaque? Natus veritatis unde tenetur deleniti reiciendis, dolores soluta ipsa hic enim nesciunt labore consequuntur voluptate laboriosam voluptatibus fugiat aliquid?</Item>
+      <Item className="fifthitem   item">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, ipsa eaque? Natus veritatis unde tenetur deleniti reiciendis, dolores soluta ipsa hic enim nesciunt labore consequuntur voluptate laboriosam voluptatibus fugiat aliquid?</Item>
+      <Item className="sixthitem   item ">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe, ipsa eaque? Natus veritatis unde tenetur deleniti reiciendis, dolores soluta ipsa hic enim nesciunt labore consequuntur voluptate laboriosam voluptatibus fugiat aliquid?</Item>
